# PolyClaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RISK_CONFIG.yaml  SAFETY_CHECKLIST.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 12790ebddfa9_make_decision_id_fk_nullable.py  9ca76fdfabd0_initial_migration.py  a1b2c3d4e5f6_add_llm_estimates_table.py  add_exec_fields.py  b2c3d4e5f6a7_add_news_and_sentiment_tables.py  c3d4e5f6a7b8_add_onchain_tracking_tables.py  d4e5f6a7b8c9_add_cross_platform_arbitrage_tables.py
docs/: dr-test-procedure.md  runbook.md
infrastructure/: alarms.tf  alb.tf  backend.tf  dr.tf  ecs-task-iam.tf  ecs.tf  eventbridge.tf  grafana-variables.tf  grafana.tf  lambda.tf  outputs.tf  providers.tf  rds.tf  s3.tf  secrets.tf  variables.tf
polyclaw/: cli.py  config.py  db.py  domain.py  evidence.py  models.py  notifications.py  proposals.py  ranking.py  repositories.py  risk.py  safety.py  schemas.py  secrets.py  strategy.py  workflow.py
polyclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polyclaw/api/: main.py
polyclaw/backtest/: __init__.py  reports.py  runner.py  slippage.py  walkforward.py
polyclaw/data/: __init__.py  cross_platform.py  news_fetcher.py  onchain.py  sentiment.py
polyclaw/dr/: __init__.py  recovery.py
polyclaw/execution/: __init__.py  orders.py  price_bands.py  retry.py  staged_size.py  state.py  tracker.py  whitelist.py
polyclaw/ingestion/: __init__.py  backfill.py  fetchers.py
polyclaw/llm/: __init__.py  client.py  parser.py  prompts.py
polyclaw/monitoring/: __init__.py  alerts.py  anomaly.py  channels.py  health.py  metrics.py  pnl.py
polyclaw/providers/: base.py  ctf.py  paper_execution.py  polymarket_gamma.py  prerequisites.py  sample_evidence.py  sample_market.py  signer.py
polyclaw/reconciliation/: __init__.py  alerts.py  detector.py  service.py  types.py
polyclaw/risk/: __init__.py  clusters.py  config.py  engine.py  portfolio.py  sizing.py
polyclaw/scaling/: __init__.py  evaluator.py  expansion.py  fee_calculator.py  manager.py  (+1 more)
(+83 files in other folders)
