[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyclaw"
version = "0.1.0"
description = "Guarded Polymarket auto-analysis and execution framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Zeus"}]
dependencies = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
  "sqlalchemy>=2.0",
  "pydantic>=2.11",
  "pydantic-settings>=2.10",
  "httpx>=0.28",
  "boto3>=1.34",
  "requests>=2.32",
  "pyyaml>=6.0",
  "eth-account>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.2",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "ruff>=0.9",
  "mypy>=1.13",
  "requests>=2.32",
  "types-PyYAML>=6.0",
  "types-requests>=2.32",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B028", "UP007", "UP017", "B008", "B904", "SIM102", "SIM103", "SIM105", "SIM108", "UP042", "F841", "B007", "E741", "F601", "N806", "SIM117", "F401", "B011"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
polyclaw = "polyclaw.cli:main"

[tool.setuptools.packages.find]
include = ["polyclaw*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
